# SpectralixBenchmark

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analysis/: error_case_rescue_overlay_summary_20260413.json  error_case_subset_20260413.jsonl  error_case_subset_20260413_manifest.json  pro_model_eda_prompt_20260413.md  results_bundle_manifest_20260413.md  task_subtype_report_20260413.csv  task_subtype_report_20260413.md
analysis/error_case_shards_20260413/: manifest.json  shard_1.jsonl  shard_2.jsonl  shard_3.jsonl
analysis/run_rescue_work_20260413/: final_recompute_report_20260414.json
benchmark/: Full_synthesis.csv  LEVELS.md  PAPER_EVALS.md  README.md  benchmark_v1_0.jsonl  benchmark_v1_0_copy.jsonl  level_b_eval.jsonl  level_c_eval.jsonl  levels_manifest.yaml  manual_parsed_exam.csv  msms_structure_prediction.csv  paper_eval_manifest.yaml  unread_part.csv
data/ai_parsed/: 5216cbec86c699967cb44c5acf49a599_exam2_key.jsonl  Ch 41c Midterm Exam KEY.jsonl  Ch41c_Quiz3_KEY.jsonl  Ch41c_Quiz4_KEY.jsonl  c1d12e5c5ca19340135dd629d8ebb423_exam1_key.jsonl  cc4f02a745983085deec4b59d7683d4b_exam3key.jsonl  e0976c25416dda2caeb8621085a9ffde_exam4key.jsonl
docs/: annotation_quidelines.md  architecture.md  benchmark_construction.md  benchmark_ladder.md  benchmark_specification.md  benchmark_taxonomy.md  conventions.md  evaluation_methodology.md  g_eval.md  g_eval_benchmark_v3.md  quality.md  rag_design.md  security_runbook.md
docs/tools/: README.md
external_sources/: README.md  inventory.csv  inventory.md  manifest.yaml
external_sources/blocked/: Pistachio_commercial.txt  RMechDB_access.txt  Reaxys_commercial.txt
external_sources/level_a/: README.md
external_sources/level_b/: README.md
external_sources/shared/: README.md
runs/benchmark_v3_gemini3flash_minimal_no-sgr/: breakdown_by_planning_horizon.json  breakdown_by_subtrack.json  breakdown_by_suite.json  breakdown_by_task_mode.json  breakdown_by_task_subtype.json  final_table.md  metrics.json  run_manifest.json  summary.csv  summary.json
runs/benchmark_v3_glm51_minimal_no-sgr/: agent_config_glm51_high.yaml  costs_rub.json  (+4 more)
scripts/: __init__.py  build_level_benchmark_files.py  build_paper_eval_subsets.py
spectralix_benchmark/: __init__.py
tests/: test_agents.py  test_benchmark_taxonomy.py  test_build_cli.py  test_evaluation_cli_runtime.py  test_evaluation_contracts.py  test_pydantic_guard.py
(+419 files in other folders)
