[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "spectralix-benchmark"
version = "0.1.0"
description = "Benchmark and evaluation tooling for chemistry-focused AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.3.0",
  "requests>=2.31.0",
  "tqdm>=4.65.0",
  "openshell>=0.0.20",
  "pydantic-ai-slim[openai,evals]>=1.0.5",
  "ddgs>=9.9.1",
  "markdownify>=1.2.0",
  "PyYAML>=6.0.0",
  "Pillow>=10.0.0",
  "PyMuPDF>=1.23.0",
  "pdf2image>=1.16.0",
  "rdkit>=2025.9.6",
]

[tool.uv]
package = false
