[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "spectralix-benchmark"
version = "0.1.0"
description = "Benchmark and evaluation tooling for chemistry-focused AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.3.0",
  "tqdm>=4.65.0",
  "openshell>=0.0.20",
  "pydantic-ai-slim[openai,evals]>=1.0.5",
  "ddgs>=9.9.1",
  "PyYAML>=6.0.0",
  "rdkit>=2025.9.6",
]

[tool.hatch.build.targets.wheel]
packages = ["spectralix_benchmark"]

[tool.uv]
package = true
