[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "spectralix-benchmark"
version = "0.1.0"
description = "Benchmark and evaluation tooling for chemistry-focused AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.3.0",
  "tqdm>=4.65.0",
  "openshell>=0.0.20",
  "pydantic-ai-slim[openai,evals]>=1.0.5",
  "ddgs>=9.9.1",
  "PyYAML>=6.0.0",
  "rdkit>=2025.9.6",
]

[project.scripts]
spectralix-student = "spectralix_benchmark.evaluation.cli.student_validation:main"
spectralix-judge = "spectralix_benchmark.evaluation.cli.llm_judge:main"
spectralix-matrix = "spectralix_benchmark.evaluation.cli.run_full_matrix:main"
spectralix-materialize = "spectralix_benchmark.evaluation.materialize_benchmark_v3_eval:main"
spectralix-build-levels = "spectralix_benchmark.build.level_benchmark_files:main"
spectralix-build-paper-eval = "spectralix_benchmark.build.paper_eval_subsets:main"
spectralix-build = "spectralix_benchmark.build.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spectralix_benchmark"]

[tool.uv]
package = true
